<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:text="Datos Personales"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="10dp"
        android:text="@string/txtName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="10dp"
        android:text="@string/txtAddress"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="10dp"
        android:text="@string/txtCP"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/inputCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/txtMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="10dp"
        android:text="@string/txtMail"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/inputMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="10dp"
        android:text="@string/txtPhone"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:gravity="top|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="executeResumen"
            android:text="@string/botonAceptar" />
    </LinearLayout>

</LinearLayout>